# di-fusion

./: .gitignore  README.md  add_texture.py  main.py  requirements.txt
configs/: fusion-lr-kt.yaml
dataset/production/: icl_nuim.py
dataset/training/: lif_dataset.py  main_generator.py  simple_shape.py
jittor/: README.md  convert.py  criterion.py  data_generator.py  lif_dataset.py  lr_schedule.py  network.py  train.py  train.yaml
jittor/sampler_cuda/: CMakeLists.txt
jittor/utils/: exp_util.py  motion_util.py
network/: di_decoder.py  di_encoder.py
pytorch/: README.md  data_generator.py  network_trainer.py
pytorch/ckpt/default/: encoder_300.pth.tar  hyper.json  model_300.pth.tar
pytorch/configs/: data-shapenet.yaml  fusion-lr-kt.yaml  train-cnp.yaml
pytorch/dataset/production/: __init__.py
pytorch/dataset/training/: shapenet_model.py  shapenet_valid_list.json
pytorch/network/: criterion.py  utility.py
pytorch/sampler_cuda/: PreprocessMesh.cu  Utils.h
pytorch/system/: tracker.py
pytorch/system/ext/: __init__.py
pytorch/system/ext/marching_cubes/: mc.cpp  mc_interp_kernel.cu
pytorch/system/ext/pcproc/: cuda_kdtree.cuh  pcproc.cpp  pcproc.cu
pytorch/trainer/: lr_schedule.py  main.py
sampler_cuda/: ShaderProgram.cpp  Utils.cu
system/: map.py
system/ext/: __init__.py
system/ext/imgproc/: common.cuh  imgproc.cpp  imgproc.cu  photometric.cu
system/ext/indexing/: indexing.cpp  indexing.cu
system/ext/marching_cubes/: mc_data.cuh
system/ext/pcproc/: cuda_kdtree.cu  cutil_math.h
utils/: exp_util.py  pt_util.py  vis_util.py
